Fixed the overlap of 'Portfolio' and revised resume.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -152,7 +152,6 @@ a:hover {
 
 .banner {
     background-color: #212121;
-    height:50px;
     width:100%;
     margin:0px auto;
 }
@@ -162,6 +161,8 @@ a:hover {
     border-top:2px solid grey;
     border-bottom:2px solid grey;
     background-color: black;
+    width: 100%;
+    float: left;
 }
 
 .nav-item{
